# purple-garden

./: .gitignore  CONTRIBUTE.md  Cargo.toml  Makefile  README  README.md  adts.c  adts.h  bcb.c  build.rs  builder.c  builder.h  builtins.c  builtins.h  bump.c  cc.c  cc.h  commit.h  common.c  common.h  dis.c  flake.nix  gc.c  gc.h  io.c  io.h  lexer.c  lexer.h  list.c  list.h  lookup.h  main.c  map.c  map.h  mem.c  mem.h  parser.c  parser.h  pg.c  pg.h  (+9 more)
.github/workflows/: ci.yml
6cl/: 6cl.c  6cl.h
NRFC/: Readme.md  generics.md  jit.md  performance.md  stdlib.md
benches/: compilation.rs  dispatch.rs  factorial.rs  fib.rs  suite.rs
benches/common/: mod.rs
benches/programs/: call_chain.garden  collatz.garden  factorial.garden  fib.garden  mandelbrot.garden  many_functions.garden  tak.garden  wide_match.garden
benchmarks/: bin.garden  matrix.garden
docs/: design.md  jit.md  lang.md  opt.md  vm-cc-design.md
examples/: ackermann.garden  call_chain.garden  collatz.garden  conditionals.garden  control.garden  factorial.garden  fib.garden  functions.garden  functions.pg  gc.garden  hello-world.garden  hello-world.pg  jitprogress.garden  json.garden  mandelbrot.garden  many_functions.garden  math.garden  ops.garden  ops.pg  regressions.garden  std.garden  tak.garden  values.garden  values.pg  variables.garden  variables.pg  wide_match.garden
examples/embed-config/: Cargo.toml  build.rs  config.garden  extern.garden
examples/embed-config/src/: config.rs  main.rs
examples/embed-counter/: Cargo.toml  build.rs  extern.garden
examples/embed-counter/src/: counter.garden  counter.rs  main.rs
examples/embedding/: Makefile  README.md  hello.garden  main.c
help/: embed.md  embed.txt  intro.md  intro.txt  types.md  types.txt
purple-garden/: Cargo.toml  build.rs
purple-garden-bc/: Cargo.toml
purple-garden-bc/src/: dis.rs  elf.rs  intern.rs  lib.rs  regalloc.rs
purple-garden-cli/: Cargo.toml
purple-garden-cli/src/: cli.rs  doc.rs  elf.rs  frontend.rs  help.rs  input.rs  lsp.rs  main.rs
purple-garden-cli/src/lsp/: analysis.rs  code_action.rs  collect.rs  completion.rs  definition.rs  diagnostic.rs  hover.rs  server.rs  source.rs
purple-garden-frontend/: Cargo.toml
purple-garden-frontend/src/: ast.rs  diagnostic.rs  err.rs  lib.rs  lower.rs  parser.rs  typecheck.rs
purple-garden-frontend/src/lex/: byte_search.rs  mod.rs  tok.rs
purple-garden-ir/: Cargo.toml
purple-garden-ir/src/: constant.rs  display.rs  lib.rs  ptype.rs
purple-garden-jit/: Cargo.toml
purple-garden-jit/src/: consts.rs  lib.rs  mem.rs  regalloc.rs
purple-garden-jit/src/aarch64/: mod.rs
purple-garden-jit/src/asm/: aarch64.rs  x86.rs
purple-garden-jit/src/x86/: mod.rs
purple-garden-macros/: Cargo.toml
purple-garden-macros/src/: derives.rs  lib.rs  pkg.rs
purple-garden-opt/: Cargo.toml
purple-garden-opt/src/: lib.rs
purple-garden-opt/src/bc/: jmp_next.rs  mod.rs  mov_merge.rs  pack_spills.rs  self_move.rs
purple-garden-opt/src/ir/: addrof_fold.rs  branch_cmp.rs  const_fold.rs  const_fold_syscalls.rs  dce.rs  imm_fold.rs  indirect_jump.rs  load_store_fold.rs  mod.rs  ret_inline.rs  tailcall.rs
purple-garden-runtime/: Cargo.toml
purple-garden-runtime/src/: anomaly.rs  gc.rs  jit_helpers.rs  lib.rs  op.rs  value.rs  vm.rs
purple-garden-shared/: Cargo.toml
purple-garden-shared/src/: config.rs  lib.rs  mmap.rs
purple-garden-std/: Cargo.toml
purple-garden-std/src/: conv.rs  io.rs  lib.rs  math.rs  strings.rs  syscall_macros.rs  testing.rs  unsafe.rs
purple-garden-typecheck/: Cargo.toml
purple-garden-typecheck/src/: display.rs  lib.rs  typedefs.rs
purple-garden/benches/: dispatch.rs  suite.rs
purple-garden/benches/programs/: ackermann.garden
purple-garden/examples/: regressions.garden
purple-garden/src/: config.rs  help.rs  input.rs  lib.rs  main.rs  mmap.rs
purple-garden/src/jit/: mod.rs
purple-garden/tests/: examples.rs  macros.rs
src/: ast.rs  config.rs  err.rs  help.rs  input.rs  ir.rs  lex.rs  lib.rs  main.rs  mmap.rs  op.rs  parser.rs  ralloc.rs  repl.rs
src/asm/: x86.rs
src/bc/: ctx.rs  dis.rs  intern.rs  mod.rs  reg.rs  regalloc.rs
src/cc/: ctx.rs  dis.rs  mod.rs  reg.rs
src/ir/: display.rs  lower.rs  mod.rs  ptype.rs  typecheck.rs
src/jit/: buf.rs  consts.rs  mod.rs
src/lex/: byte_search.rs  mod.rs  tok.rs
src/opt/: bc.rs  ir.rs  mod.rs
src/opt/bc/: cmp_imm.rs  const_add.rs  const_binary.rs  imm_fold.rs  jmp_next.rs  mod.rs  mov_merge.rs  pack_spills.rs  self_move.rs
src/opt/ir/: const_fold.rs  imm_fold.rs  indirect_jump.rs  mod.rs  ret_inline.rs  tailcall.rs
src/repl/: editor.rs  eval.rs  mod.rs  raw.rs  session.rs
src/std/: conv.rs  io.rs  mod.rs  strings.rs  test.rs  testing.rs
src/vm/: anomaly.rs  mod.rs  op.rs  value.rs
std/: arr.c  conv.c  env.c  fmt.c  fmt.h  fs.c  math.c  opt.c  opt.h  runtime.c  runtime.h  std.c  std.h  str.c
tests/: examples.rs  test.c
tree-sitter/: .gitignore  README.md  grammar.js  package.json  tree-sitter.json
tree-sitter/queries/: highlights.scm
tree-sitter/queries/garden/: highlights.scm
