[package]
name = "purple-garden"
version = "0.1.0"
description = "Lean scripting language, designed and implemented with a focus on performance and a low memory profile "
edition = "2024"
default-run = "purple-garden"

[features]
trace = []
nightly = []

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.10.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
debug = true

[profile.profiling]
inherits = "release"
lto = false
codegen-units = 16
debug = true
strip = false

[[bench]]
name = "dispatch"
harness = false

[[bench]]
name = "suite"
harness = false
