[workspace]
members = ["purple-garden", "purple-garden-cli", "purple-garden-ir", "purple-garden-jit", "purple-garden-macros", "purple-garden-runtime", "purple-garden-std", "purple-garden-opt", "purple-garden-bc", "purple-garden-frontend", "purple-garden-typecheck", "purple-garden-shared"]
default-members = ["purple-garden-cli"]
resolver = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
debug = true

[profile.profiling]
inherits = "release"
lto = false
codegen-units = 16
debug = true
strip = false
