[package]
name = "purple-garden-cli"
version = "0.1.0"
description = "Command line interface for Purple Garden"
edition = "2024"
default-run = "purple-garden"

[features]
trace = [
    "purple-garden/trace",
    "purple-garden-ir/trace",
    "purple-garden-frontend/trace",
    "purple-garden-opt/trace",
    "purple-garden-bc/trace",
    "purple-garden-jit/trace",
    "purple-garden-runtime/trace",
    "purple-garden-shared/trace",
    "purple-garden-std/trace",
]

[[bin]]
name = "purple-garden"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
lsp-server = "=0.7.8"
lsp-types = "0.97.0"
purple-garden = { path = "../purple-garden" }
purple-garden-ir = { path = "../purple-garden-ir" }
purple-garden-jit = { path = "../purple-garden-jit" }
purple-garden-runtime = { path = "../purple-garden-runtime" }
purple-garden-std = { path = "../purple-garden-std" }
purple-garden-opt = { path = "../purple-garden-opt" }
purple-garden-bc = { path = "../purple-garden-bc" }
purple-garden-frontend = { path = "../purple-garden-frontend" }
purple-garden-shared = { path = "../purple-garden-shared", features = ["cli"] }
serde = "1.0"
serde_json = "1.0"
