[package]
name = "purple-garden-jit"
version = "0.1.0"
edition = "2024"

[dependencies]
purple-garden-ir = { path = "../purple-garden-ir" }
purple-garden-shared = { path = "../purple-garden-shared" }

[dev-dependencies]
purple-garden-runtime = { path = "../purple-garden-runtime" }

[features]
trace = []
