[package]
name = "purple-garden"
version = "0.1.0"
description = "Lean scripting language, designed and implemented with a focus on performance and a low memory profile "
edition = "2024"
default-run = "purple-garden"

[features]
trace = []

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
purple-garden-ir = { path = "../purple-garden-ir" }
purple-garden-jit = { path = "../purple-garden-jit" }
purple-garden-runtime = { path = "../purple-garden-runtime" }
purple-garden-std = { path = "../purple-garden-std" }
purple-garden-opt = { path = "../purple-garden-opt" }
purple-garden-bc = { path = "../purple-garden-bc" }
purple-garden-frontend = { path = "../purple-garden-frontend" }
purple-garden-shared = { path = "../purple-garden-shared" }

[dev-dependencies]
criterion = "0.5"
rand = "0.10.0"

[[bench]]
name = "dispatch"
harness = false

[[bench]]
name = "suite"
harness = false
